--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,25 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top transparent text-center">
-			<a href="#"><span class="glyphicon glyphicon-home navbar-btn myicon"></span></a>
+			<a href="#">
+				<button type="button" class="btn btn-primary navbar-btn">
+					<span class="glyphicon glyphicon-home"></span></button></a>
+			<a href="https://github.com/timCF" target="_blank">
+				<button type="button" class="btn btn-warning navbar-btn">
+					<span class="glyphicon glyphicon-random"></span></button></a>
+			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank">
+				<button type="button" class="btn btn-danger navbar-btn">
+					<span class="glyphicon glyphicon-save"></span></button></a>
+			<a href="mailto:llStrainll@gmail.com" target="_blank">
+				<button type="button" class="btn btn-info navbar-btn">
+					<span class="glyphicon glyphicon-envelope"></span></button></a>
+			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank">
+				<button type="button" class="btn btn-success navbar-btn">
+					<span class="glyphicon glyphicon-usd"></span></button></a>
 		</nav>
 
 		<div class="text-center"> {{ content }} </div>
 
-		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center">
-			<a href="mailto:llStrainll@gmail.com"><button type="button" class="btn btn-success navbar-btn">llStrainll@gmail.com</button></a>
-			<a href="https://github.com/timCF" target="_blank"><button type="button" class="btn btn-warning navbar-btn">github</button></a>
-		</nav>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	</body>
