--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,13 @@
 			<a href="#">
 				<button type="button" class="btn btn-primary navbar-btn">
 					<span class="glyphicon glyphicon-home"></span></button></a>
+		</nav>
+
+
+		<div class="text-center"> {{ content }} </div>
+
+
+		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center">
 			<a href="https://github.com/timCF" target="_blank">
 				<button type="button" class="btn btn-warning navbar-btn">
 					<span class="glyphicon glyphicon-random"></span></button></a>
@@ -25,7 +32,6 @@
 					<span class="glyphicon glyphicon-usd"></span></button></a>
 		</nav>
 
-		<div class="text-center"> {{ content }} </div>
 
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
