--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,11 @@ body {
 	padding-top: 50px;
 	background-color: #BFE2CA;
 }
-nav {
-	background-color: #BFE2CA;
-}
 .transparent {
 	opacity: 0.6;
+}
+.myicon {
+	font-size: 1.3em;
 }
 .c_light {
 	background-color: #D0E2EC;
@@ -19,4 +19,7 @@ nav {
 }
 .c_red {
 	background-color: #F4858E;
+}
+.c_main {
+	background-color: #BFE2CA;
 }
