--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,11 @@
 
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script>$(document).ready(function(){
-			$('[data-toggle="popover"]').popover();});
-			$('[data-toggle="tooltip"]').tooltip();
+		<script>
+			$(document).ready(function(){
+				$('[data-toggle="popover"]').popover();
+				$('[data-toggle="tooltip"]').tooltip();
+			});
 		</script>
 	</body>
 </html>
