--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,18 +10,18 @@
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main">
 			<a href="/">
-				<button type="button" class="btn btn-primary navbar-btn">
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="projects">
 					<span class="glyphicon glyphicon-home"></span></button></a>
 			<a href="/person">
-				<button type="button" class="btn btn-primary navbar-btn">
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="person">
 					<span class="glyphicon glyphicon-user"></span></button></a>
 			<a href="https://github.com/timCF" target="_blank">
-				<button type="button" class="btn btn-info navbar-btn">
+				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="github">
 					<span class="fa fa-github myicon"></span></button></a>
-			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank">
+			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
 				<button type="button" class="btn btn-info navbar-btn">
 					<span class="glyphicon glyphicon-save"></span></button></a>
-			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank">
+			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate!">
 				<button type="button" class="btn btn-success navbar-btn">
 					<span class="glyphicon glyphicon-usd"></span></button></a>
 		</nav>
@@ -32,16 +32,16 @@
 
 		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main">
 			<a href="mailto:llStrainll@gmail.com">
-				<button type="button" class="btn btn-primary navbar-btn">
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
 					<span class="glyphicon glyphicon-envelope"></span></button></a>
 			<a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn">
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="linkedin">
 					<span class="fa fa-fw fa-linkedin"></span></button></a>
 			<a href="https://www.facebook.com/llstrainll" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn">
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="facebook">
 					<span class="fa fa-facebook-official myicon"></span></button></a>
 			<a href="https://habrahabr.ru/users/strain/topics/" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn">H</button></a>
+				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="habrahabr">H</button></a>
 			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="tkachuk.i.m.">
 				<span class="fa fa-skype myicon"></span></button>
 			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="lltimCFll">
