--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,9 @@ a {
 	cursor: pointer;
 	display: inline-block;
 }
+.row-eq-height {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+}
