--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
+		<link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/main.css"/>
+		<link rel="shortcut icon" href="/favicon.ico"/>
 	</head>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main">
