--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,11 +54,6 @@
 
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script>
-			$(document).ready(function(){
-				$('[data-toggle="popover"]').popover();
-				$('[data-toggle="tooltip"]').tooltip();
-			});
-		</script>
+		<script src="/js/main.js"></script>
 	</body>
 </html>
