add crazy css animations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,12 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
 		<link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"/>
+		<link rel="stylesheet" type="text/css" href="/bower_components/animate.css/animate.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/main.css"/>
 		<link rel="shortcut icon" href="/favicon.ico"/>
 	</head>
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main">
+		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main animated flipInX">
 			<a href="/">
 				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="projects">
 					<span class="glyphicon glyphicon-home"></span></button></a>
@@ -31,7 +32,7 @@
 		<div class="text-center"> {{ content }} </div>
 
 
-		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main">
+		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main animated flipInX">
 			<a href="mailto:llStrainll@gmail.com">
 				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
 					<span class="glyphicon glyphicon-envelope"></span></button></a>
@@ -54,6 +55,7 @@
 
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="/bower_components/js-yaml/dist/js-yaml.js"></script>
 		<script src="/js/main.js"></script>
 	</body>
 </html>
