--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
 	padding-top: 50px;
 	padding-bottom: 50px;
 	background-color: #BFE2CA;
+	overflow-x: hidden;
 }
 a {
 	text-decoration: none !important;;
@@ -47,7 +48,6 @@ a {
 	height: 30px;
 	max-height: 30px;
 	overflow:hidden;
-	cursor: help;
 	display: inline-block;
 }
 .row-eq-height {
@@ -94,4 +94,7 @@ a {
 }
 .bigfont {
 	font-size: 2em;
+}
+.inithidden {
+	display:  none !important
 }
