--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,6 @@ a {
 	width: 33.333333333333333%;
 	margin-left: 5px;
 }
-.black {
-	background-color: black;
+.widthlimited {
+	max-width: 100%;
 }
