try fix mobile scroll modal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,49 +10,58 @@
 		<link rel="shortcut icon" href="/favicon.ico"/>
 	</head>
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main animated flipInX">
-			<a href="/">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="projects">
-					<span class="glyphicon glyphicon-home"></span></button></a>
-			<a href="/person">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="person">
-					<span class="glyphicon glyphicon-user"></span></button></a>
-			<a href="https://github.com/timCF" target="_blank">
-				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="github">
-					<span class="fa fa-github myicon"></span></button></a>
-			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
-				<button type="button" class="btn btn-info navbar-btn">
-					<span class="glyphicon glyphicon-save"></span></button></a>
-			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate!">
-				<button type="button" class="btn btn-success navbar-btn">
-					<span class="glyphicon glyphicon-usd"></span></button></a>
-		</nav>
 
+		<!-- Main -->
+		<div class="wrap">
+			<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main animated flipInX">
+				<a href="/">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="projects">
+						<span class="glyphicon glyphicon-home"></span></button></a>
+				<a href="/person">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="person">
+						<span class="glyphicon glyphicon-user"></span></button></a>
+				<a href="https://github.com/timCF" target="_blank">
+					<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="github">
+						<span class="fa fa-github myicon"></span></button></a>
+				<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
+					<button type="button" class="btn btn-info navbar-btn">
+						<span class="glyphicon glyphicon-save"></span></button></a>
+				<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate!">
+					<button type="button" class="btn btn-success navbar-btn">
+						<span class="glyphicon glyphicon-usd"></span></button></a>
+			</nav>
 
-		<div class="text-center"> {{ content }} </div>
+			<div class="text-center"> {{ content }} </div>
 
+			<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main animated flipInX">
+				<a href="mailto:llStrainll@gmail.com">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
+						<span class="glyphicon glyphicon-envelope"></span></button></a>
+				<a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="linkedin">
+						<span class="fa fa-fw fa-linkedin"></span></button></a>
+				<a href="https://www.facebook.com/llstrainll" target="_blank">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="facebook">
+						<span class="fa fa-facebook-official myicon"></span></button></a>
+				<a href="https://habrahabr.ru/users/strain/topics/" target="_blank">
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="habrahabr">H</button></a>
+				<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="tkachuk.i.m.">
+					<span class="fa fa-skype myicon"></span></button>
+				<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="lltimCFll">
+					<span class="glyphicon glyphicon-send"></span></button>
+				<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="+79164703189">
+					<span class="glyphicon glyphicon-earphone"></span></button>
+			</nav>
+		</div>
 
-		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main animated flipInX">
-			<a href="mailto:llStrainll@gmail.com">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
-					<span class="glyphicon glyphicon-envelope"></span></button></a>
-			<a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="linkedin">
-					<span class="fa fa-fw fa-linkedin"></span></button></a>
-			<a href="https://www.facebook.com/llstrainll" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="facebook">
-					<span class="fa fa-facebook-official myicon"></span></button></a>
-			<a href="https://habrahabr.ru/users/strain/topics/" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="habrahabr">H</button></a>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="tkachuk.i.m.">
-				<span class="fa fa-skype myicon"></span></button>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="lltimCFll">
-				<span class="glyphicon glyphicon-send"></span></button>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="+79164703189">
-				<span class="glyphicon glyphicon-earphone"></span></button>
-		</nav>
+		<!-- Modal -->
+		<div class="modal fade transparent" id="ava1">
+			<div class="modal-dialog">
+				<img class="widthlimited" src="/img/summary/ava1.jpg"/>
+			</div>
+		</div>
 
-
+		<!-- JS -->
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/bower_components/js-yaml/dist/js-yaml.js"></script>
