Revert "try fix mobile scroll modal"
This reverts commit 562c992cb021516e5b9b2d761610bf5bfe4328c6.

--- a/css/main.css
+++ b/css/main.css
@@ -103,14 +103,17 @@ a {
 .widthlimited {
 	max-width: 100%;
 }
-/* prevent modal scroll on mobile devices */
-body.modal-open > .wrap {
-	overflow: hidden;
-	height: 100%;
-}
-.modal-content, .modal-dialog, .modal-body {
-	height: inherit;
-}
 .modal {
-	height: inherit;
+	position: fixed;
+	top: 3%;
+	right: 3%;
+	left: 3%;
+	width: auto;
+	margin: 0;
+}
+.modal-body {
+	max-height: 350px;
+	padding: 15px;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
 }
