--- a/css/main.css
+++ b/css/main.css
@@ -103,17 +103,6 @@ a {
 .widthlimited {
 	max-width: 100%;
 }
-.modal {
+.fixed {
 	position: fixed;
-	top: 3%;
-	right: 3%;
-	left: 3%;
-	width: auto;
-	margin: 0;
-}
-.modal-body {
-	max-height: 350px;
-	padding: 15px;
-	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
 }
