--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
 				<button type="button" class="btn btn-info navbar-btn">
 					<span class="glyphicon glyphicon-save"></span></button></a>
-			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate!">
+			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate">
 				<button type="button" class="btn btn-success navbar-btn">
 					<span class="glyphicon glyphicon-usd"></span></button></a>
 		</nav>
