add erlang-universe section, update contacts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
 			<a href="https://github.com/timCF" target="_blank">
 				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="github">
 					<span class="fa fa-github myicon"></span></button></a>
+			<a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">
+				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="erlang-universe">
+					<span class="fa myicon">E</span></button></a>
 			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
 				<button type="button" class="btn btn-info navbar-btn">
 					<span class="glyphicon glyphicon-save"></span></button></a>
@@ -33,7 +36,7 @@
 
 
 		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main animated flipInX">
-			<a href="mailto:llStrainll@gmail.com">
+			<a href="mailto:tim4CF@gmail.com">
 				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
 					<span class="glyphicon glyphicon-envelope"></span></button></a>
 			<a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">
@@ -48,7 +51,7 @@
 				<span class="fa fa-skype myicon"></span></button>
 			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="lltimCFll">
 				<span class="glyphicon glyphicon-send"></span></button>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="+79778155221">
+			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="+372 5811 4271">
 				<span class="glyphicon glyphicon-earphone"></span></button>
 		</nav>
 
