--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap.css"/>
 		<link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap-theme.css"/>
 		<link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"/>
@@ -11,50 +14,34 @@
 		<link rel="shortcut icon" href="/favicon.ico"/>
 	</head>
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top transparent text-center c_main animated flipInX">
-			<a href="/">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="projects">
-					<span class="glyphicon glyphicon-home"></span></button></a>
-			<a href="/person">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="bottom" title="person">
-					<span class="glyphicon glyphicon-user"></span></button></a>
-			<a href="https://github.com/timCF" target="_blank">
-				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="github">
-					<span class="fa fa-github myicon"></span></button></a>
-			<a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">
-				<button type="button" class="btn btn-info navbar-btn" data-toggle="tooltip" data-placement="bottom" title="erlang-universe">
-					<span class="fa myicon">E</span></button></a>
-			<a href="https://yadi.sk/d/wunDCfMjo5SmK" target="_blank" data-toggle="tooltip" data-placement="bottom" title="download x86 64-bit builds">
-				<button type="button" class="btn btn-info navbar-btn">
-					<span class="glyphicon glyphicon-save"></span></button></a>
-			<a href="http://yasobe.ru/na/opensource#form_submit" target="_blank" data-toggle="tooltip" data-placement="bottom" title="donate">
-				<button type="button" class="btn btn-success navbar-btn">
-					<span class="glyphicon glyphicon-usd"></span></button></a>
-		</nav>
+
+    <!-- Navbar -->
+    <div class="app-nav">
+      <a href="/" class="btn btn-default">
+        <strong>HOME</strong>
+        <span class="fa fa-home fa-2x"></span>
+      </a>
+      <div class="btn-group" role="group">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <strong>MENU</strong>
+            <span class="fa fa-bars fa-2x"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Dropdown link</a></li>
+            <li><a href="#">Dropdown link</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
 
-		<div class="text-center"> {{ content }} </div>
 
+		<div> {{ content }} </div>
 
-		<nav class="navbar navbar-default navbar-fixed-bottom transparent text-center c_main animated flipInX">
-			<a href="mailto:tim4CF@gmail.com">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="write e-mail">
-					<span class="glyphicon glyphicon-envelope"></span></button></a>
-			<a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="linkedin">
-					<span class="fa fa-fw fa-linkedin"></span></button></a>
-			<a href="https://www.facebook.com/llstrainll" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="facebook">
-					<span class="fa fa-facebook-official myicon"></span></button></a>
-			<a href="https://habrahabr.ru/users/strain/topics/" target="_blank">
-				<button type="button" class="btn btn-primary navbar-btn" data-toggle="tooltip" data-placement="top" title="habrahabr">H</button></a>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="tkachuk.i.m.">
-				<span class="fa fa-skype myicon"></span></button>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="lltimCFll">
-				<span class="glyphicon glyphicon-send"></span></button>
-			<button type="button" class="btn btn-info navbar-btn" data-container="body" data-toggle="popover" data-placement="top" data-content="+372 5811 4271">
-				<span class="glyphicon glyphicon-earphone"></span></button>
-		</nav>
+    <script type="text/javascript">
+      var _386 = { fastLoad: true };
+    </script>
 
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstra.386/v3.3.2/dist/js/bootstrap.js"></script>
