--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
     <!-- Navbar -->
     <div class="app-nav">
-      <a href="/" class="btn btn-default">
+
+      <a href="/" class="btn btn-default" role="button">
         <strong>HOME</strong>
         <span class="fa fa-home fa-2x"></span>
       </a>
