--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,9 @@
 
 		<div> {{ content }} </div>
 
+    <!-- Force 3d acceleration always and forever :) -->
+    <div class="app-force-gpu"></div>
+
     <script type="text/javascript">
       var _386 = { fastLoad: true };
     </script>
