--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,14 @@ body {
   overflow-x: hidden;
 }
 
+.app-force-gpu {
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  -o-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
 a {
 	text-decoration: none !important;
 }
