add awesome novacancy neon animations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     <script src="/bower_components/bootstra.386/v3.3.2/dist/js/bootstrap.js"></script>
     <script src="/bower_components/js-yaml/dist/js-yaml.js"></script>
     <script src="/bower_components/typed.js/lib/typed.js"></script>
+    <script src="/bower_components/novacancy.js/javascript/jquery.novacancy.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
