add tinseltown.js switch-on animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap-theme.css"/>
     <link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="/bower_components/animate.css/animate.css"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/tinseltown.js/tinseltown.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
   </head>
@@ -29,6 +30,7 @@
     <script src="/bower_components/js-yaml/dist/js-yaml.js"></script>
     <script src="/bower_components/typed.js/lib/typed.js"></script>
     <script src="/bower_components/novacancy.js/javascript/jquery.novacancy.js"></script>
+    <script src="/bower_components/tinseltown.js/tinseltown.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
