--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
+  {% assign version = site.time | date_to_xmlschema | cgi_escape %}
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap-theme.css"/>
-    <link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" type="text/css" href="/bower_components/animate.css/animate.css"/>
-    <link rel="stylesheet" type="text/css" href="/bower_components/tinseltown.js/tinseltown.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <link rel="shortcut icon" href="/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap-theme.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/animate.css/animate.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/bower_components/tinseltown.js/tinseltown.min.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css?version={{ version }}"/>
+    <link rel="shortcut icon" href="/favicon.ico?version={{ version }}"/>
   </head>
   <body>
 
@@ -25,11 +26,11 @@
       var _386 = { fastLoad: true };
     </script>
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/bootstra.386/v3.3.2/dist/js/bootstrap.js"></script>
-    <script src="/bower_components/typed.js/lib/typed.js"></script>
-    <script src="/bower_components/novacancy.js/javascript/jquery.novacancy.js"></script>
-    <script src="/bower_components/tinseltown.js/tinseltown.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js?version={{ version }}"></script>
+    <script src="/bower_components/bootstra.386/v3.3.2/dist/js/bootstrap.js?version={{ version }}"></script>
+    <script src="/bower_components/typed.js/lib/typed.js?version={{ version }}"></script>
+    <script src="/bower_components/novacancy.js/javascript/jquery.novacancy.js?version={{ version }}"></script>
+    <script src="/bower_components/tinseltown.js/tinseltown.min.js?version={{ version }}"></script>
+    <script src="/js/main.js?version={{ version }}"></script>
   </body>
 </html>
