--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
+.row {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 .no-margin-top {
   margin-top: 0;
 }
 
 .app-block {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 button {
