change summary bg-color

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ button {
 }
 
 .app-long-summary {
-  background-color: #000084;
+  background-color: #008080 /* #008080 #4682B4 #2F4F4F */;
 }
 
 .app-nav {
