--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,27 @@
+.app-icon {
+  min-width: 32px;
+  width: 32px;
+  max-width: 32px;
+  min-height: 32px;
+  height: 32px;
+  max-height: 32px;
+  overflow: hidden;
+  display: inline-block;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.progress {
+  background-color: #303030;
+}
+
 .row {
   max-width: 1170px;
   margin: 0 auto;
+}
+
+.no-padding {
+  padding: 0;
 }
 
 .no-margin-top {
@@ -33,8 +54,16 @@ button {
   background-position:  center;
 }
 
+.app-skills {
+  background-color: #4682B4;
+}
+
 .app-long-summary {
-  background-color: #4682B4 /* #008080 #4682B4 #2F4F4F */;
+  background-color: #008080 /* #008080 #4682B4 #2F4F4F */;
+}
+
+.app-summary-img {
+  max-height: 400px;
 }
 
 .app-nav {
