--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,8 @@ button {
 }
 
 .app-img {
-  box-shadow: 0 0 0 2px #bbbbbb;
+  border-radius: 5px;
+  box-shadow: 0 0 15px #ffffff, 0 0 10px #008000, 0 0 5px #0000ff;
 }
 
 .app-main-ava {
