add skills background image

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,11 @@ button {
 }
 
 .app-skills {
-  background-color: #4682B4;
+  /*background-color: #4682B4;*/
+  background-image:     url(/img/mac-1.jpg);
+  background-repeat:    no-repeat;
+  background-size:      cover;
+  background-position:  center;
 }
 
 .app-contacts {
