--- a/css/main.css
+++ b/css/main.css
@@ -90,13 +90,7 @@ button {
 }
 
 .app-skills {
-  background-color: #4682B4;
-  /*
-  background-image:     url(/img/mac-1.jpg);
-  background-repeat:    no-repeat;
-  background-size:      cover;
-  background-position:  center;
-  */
+  background-color: #008080;
 }
 
 .app-social {
@@ -104,7 +98,6 @@ button {
 }
 
 .app-preferences {
-  /*background-color: #4682B4;*/
   background-image:     url(/img/collision.jpg);
   background-repeat:    no-repeat;
   background-size:      cover;
@@ -155,12 +148,6 @@ button {
   background-position: 40% 1%;
   background-size: 160%;
   background-repeat: no-repeat;
-  /*
-    background-origin: padding-box;
-    background-clip: border-box;
-    background-attachment: scroll;
-    background-color: transparent;
-  */
   width: 30vh;
   height: 30vh;
   margin-top: 5%;
@@ -272,16 +259,6 @@ html, body {
   -ms-transform: translate3d(0,0,0);
   -o-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
-}
-
-.pointer {
-	cursor: pointer;
-}
-
-.modal-open {
-	overflow: hidden !important;
-	position: fixed !important;
-	width: 100% !important;
 }
 
 .novacancy.off {
