new preferences section background

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ button {
 }
 
 .app-preferences {
-  background-image:     url(/img/collision.jpg);
+  background-image:     url(/img/aerial.jpg);
   background-repeat:    no-repeat;
   background-size:      cover;
   background-position:  center;
