--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ button {
 .app-contacts {
   color: white;
   text-shadow: 1px 1px 0 black;
-  background-image:     url(/img/sky-5.jpg);
+  background-image:     url(/img/sunset.jpeg);
   background-repeat:    no-repeat;
   background-size:      cover;
   background-position:  bottom;
